[package]
name = "axum-garde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[workspace.dependencies]
garde = { git = "https://github.com/jprochazk/garde" }
axum = "0.6"
# Optional dependencies
axum-extra = "0.7.2"
axum-yaml = "0.3.0"
axum-msgpack = "0.3.0"
thiserror = "1.0.40"

# Dev dependencies
serde = "1"
tokio = "1.27.0"
rstest = "0.17.0"
speculoos = "0.11.0"
axum-test = "7.2.0"
serde_json = "1.0.95"
prost = "0.11.8"

[features]
default = ["json", "query", "form"]
# Axum
json = ["axum/json"]
query = ["axum/query"]
form = ["axum/form"]
# Axum extra
axum-extra-protobuf = ["axum-extra/protobuf"]
axum-extra-query = ["axum-extra/query"]

[dependencies]
axum = { workspace = true, default-features = false }
axum-extra = { workspace = true, default-features = false, optional = true }
axum-yaml = { workspace = true, default-features = false, optional = true }
axum-msgpack = { workspace = true, default-features = false, optional = true }
garde = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
garde = { workspace = true, features = ["default", "derive"] }
axum = { workspace = true, features = ["default", "macros"] }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
rstest = { workspace = true }
axum-test = { workspace = true }
serde_json = { workspace = true }
speculoos = { workspace = true }

[[example]]
name = "json"
required-features = ["json"]

[[example]]
name = "custom_validation"
required-features = ["json"]
